Fixed Logo dimenstions and wrap on resize

--- a/css/main.css
+++ b/css/main.css
@@ -91,3 +91,38 @@ section#parteneri img {
   height: auto;
   margin: auto;
 }
+#parteneri .logo {
+  display: flex;
+  width: 160px;
+  height: 180px;
+  padding: 15px;
+  margin: 8px;
+}
+#parteneri .logo a {
+  margin: auto;
+}
+#parteneri .logo.special {
+  width: 250px;
+  height: 250px;
+  padding: 0px;
+}
+#parteneri .logo.special img {
+  width: 250px;
+  height: auto;
+  padding: 0px;
+}
+#parteneri .logo.general {
+  width: 250px;
+  height: 250%;
+}
+
+#parteneri .logo.general img {
+  width: 250px;
+  height: auto;
+  padding: 0px;
+}
+/* #parteneri img {
+    width: 250px;
+    height: auto;
+    margin: auto;
+} */
